Fix flexbox issue when lines are too long

--- a/tests/dummy/app/styles/components/docs.scss
+++ b/tests/dummy/app/styles/components/docs.scss
@@ -8,6 +8,7 @@
 // Doc page
 .doc-page {
   flex: 1;
+  min-width: 0; // Flexbox issue in chrome??
 }
 .doc-page-title {
   margin-top: 0;
